--- a/platformio.ini
+++ b/platformio.ini
@@ -147,7 +147,6 @@ board         = sanguino_atmega644p
 platform      = atmelavr
 extends       = common_avr8
 board         = sanguino_atmega1284p
-board_upload.maximum_size = 126976
 
 #
 # Melzi and clones (ATmega1284p)
@@ -158,16 +157,13 @@ extends       = common_avr8
 board         = sanguino_atmega1284p
 lib_ignore    = TMCStepper
 upload_speed  = 57600
-board_upload.maximum_size = 126976
 
 #
 # Melzi and clones (Optiboot bootloader)
 #
 [env:melzi_optiboot]
 platform      = atmelavr
-extends       = common_avr8
-board         = sanguino_atmega1284p
-lib_ignore    = TMCStepper
+extends       = env:melzi
 upload_speed  = 115200
 
 #
@@ -175,7 +171,8 @@ upload_speed  = 115200
 #
 [env:melzi_optimized]
 platform      = atmelavr
-extends       = env:melzi_optiboot
+extends       = env:melzi
+upload_speed  = 115200
 build_flags   = ${common.build_flags} -fno-tree-scev-cprop -fno-split-wide-types -Wl,--relax -mcall-prologues
 build_unflags = -g -ggdb
 
@@ -266,12 +263,11 @@ build_flags   = ${common_DUE_archim.build_flags} -funwind-tables -mpoke-function
 [env:SAMD51_grandcentral_m4]
 platform       = atmelsam
 board          = adafruit_grandcentral_m4
-build_flags    = ${common.build_flags} -std=gnu++17
-extra_scripts  = ${common.extra_scripts}
+build_flags    = ${common.build_flags} -std=gnu++17 -Wno-register
 build_unflags  = -std=gnu++11
 src_filter     = ${common.default_src_filter} +<src/HAL/SAMD51>
 lib_deps       = ${common.lib_deps}
-  SoftwareSerialM
+  SoftwareSerialM=https://github.com/FYSETC/SoftwareSerialM/archive/master.zip
   Adafruit_SPIFlash=https://github.com/adafruit/Adafruit_SPIFlash/archive/master.zip
 debug_tool     = jlink
 
@@ -314,6 +310,7 @@ board     = nxp_lpc1768
 platform  = ${common_LPC.platform}
 extends   = common_LPC
 board     = nxp_lpc1769
+upload_port = ~/Documents
 
 #################################
 #                               #
@@ -350,7 +347,7 @@ lib_ignore    =
   Adafruit NeoPixel
   SPI
 lib_deps      = ${common.lib_deps}
-  SoftwareSerialM
+  SoftwareSerialM=https://github.com/FYSETC/SoftwareSerialM/archive/master.zip
 
 #
 # STM32F103RC
@@ -389,7 +386,7 @@ lib_deps          =
   LiquidTWI2@1.2.7
   Adafruit NeoPixel=https://github.com/ccccmagicboy/Adafruit_NeoPixel#meeb_3dp_use
   SailfishLCD=https://github.com/mikeshub/SailfishLCD/archive/master.zip
-  SoftwareSerialM
+  SoftwareSerialM=https://github.com/FYSETC/SoftwareSerialM/archive/master.zip
   USBComposite for STM32F1@0.91
 lib_ignore        = SPI
 debug_tool        = stlink
@@ -545,7 +542,7 @@ build_flags   = ${common_stm32f1.build_flags}
   -DMCU_STM32F103VE
 
 #
-# MKS Robin Nano (STM32F103VET6) - Emulated Graphical 128x64 (DOGM) UI
+# MKS Robin Nano (STM32F103VET6)
 #
 [env:mks_robin_nano]
 platform      = ${common_stm32f1.platform}
@@ -555,16 +552,6 @@ platform_packages = tool-stm32duino
 extra_scripts = buildroot/share/PlatformIO/scripts/mks_robin_nano.py
 build_flags   = ${common_stm32f1.build_flags}
   -DMCU_STM32F103VE -DSS_TIMER=4
-
-#
-# MKS Robin Nano (STM32F103VET6) - MKS UI (LVGL)
-#
-[env:mks_robin_nano35]
-platform      = ${common_stm32f1.platform}
-extends       = env:mks_robin_nano
-extra_scripts = buildroot/share/PlatformIO/scripts/mks_robin_nano35.py
-lib_deps      = ${common_stm32f1.lib_deps}
-  MKS-LittlevGL=https://github.com/makerbase-mks/MKS-LittlevGL/archive/master.zip
 
 #
 # MKS Robin (STM32F103ZET6)
@@ -642,6 +629,23 @@ lib_ignore    = ${common_stm32f1.lib_ignore}
   LiquidCrystal, LiquidTWI2, TMCStepper, U8glib-HAL, SoftwareSerialM
 
 #
+# MKS Robin Nano (STM32F103VET6)
+#
+[env:mks_robin_nano35]
+platform      = ststm32
+board         = genericSTM32F103VE
+platform_packages = tool-stm32duino
+build_flags   = !python Marlin/src/HAL/STM32F1/build_flags.py
+  ${common.build_flags} -std=gnu++14 -DHAVE_SW_SERIAL -DSS_TIMER=4
+build_unflags = -std=gnu++11
+extra_scripts = buildroot/share/PlatformIO/scripts/mks_robin_nano35.py
+src_filter    = ${common.default_src_filter} +<src/HAL/STM32F1>
+lib_deps      = ${common.lib_deps}
+  SoftwareSerialM=https://github.com/FYSETC/SoftwareSerialM/archive/master.zip
+  MKS-LittlevGL=https://github.com/makerbase-mks/MKS-LittlevGL/archive/master.zip
+lib_ignore    = Adafruit NeoPixel, SPI
+
+#
 # Malyan M200 v2 (STM32F070RB)
 #
 [env:STM32F070RB_malyan]
@@ -687,17 +691,6 @@ build_unflags = ${common_stm32f1.build_unflags}
 platform      = ${common_stm32f1.platform}
 extends       = env:chitu_f103
 build_flags   = ${env:chitu_f103.build_flags} -DCHITU_V5_Z_MIN_BUGFIX
-
-#
-# Chitu boards like Tronxy X5SA (STM32F103ZET6) using TFT LVGL UI
-#
-[env:chitu_f103_lvgl]
-platform      = ${common_stm32f1.platform}
-extends       = env:chitu_f103
-src_filter    = ${common.default_src_filter} +<src/HAL/STM32F1>
-lib_deps      = ${common.lib_deps}
-  SoftwareSerialM
-  MKS-LittlevGL=https://github.com/makerbase-mks/MKS-LittlevGL/archive/master.zip
 
 #
 # Creality (STM32F103RET6)
